@@ -1,3 +1,8 @@
+2005-04-04  Christopher Faylor  <cgf@timesys.com>
+
+	* path.cc (path_conv::check): Only check for PC_NO_ACCESS_CHECK in end
+	component.
+
 2005-04-04  Corinna Vinschen  <corinna@vinschen.de>
 
 	* dcrt0.cc (dll_crt0_1): Don't call set_cygwin_privileges on 9x.
